"Implemented keyword filter and relevant testing"